<resources>
    <string name="app_name">EUDU</string>
    <string name="log_in">Log IN</string>
    <string name="userid">UserID</string>
    <string name="password">Password</string>
    <string name="scan">SCAN</string>
    <string name="add">ADD</string>
    <string name="enter_comapny_name">Enter Comapny Name</string>
    <string name="name">Name</string>
    <string name="next">NEXT</string>
    <string name="enter_company_name">Enter Company name</string>
    <string name="button">Button</string>
    <string name="submit">SUBMIT</string>
    <string name="todo">todo</string>
    <string name="read">read</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="enter_rpm">Enter RPM</string>
    <string name="please_click_below_to_read_update_or_delete_data">Please click below to read , update or delete data</string>
    <string name="please_click_below_to_add_new_data">Please click below to add new data</string>
    <string name="textviiew">TextViiew</string>
    <string name="textview">TextView</string>
    <string name="company">Company </string>
    <string name="rpm">RPM </string>
    <string name="power_rating">Power Rating </string>
    <string name="volts">Volts </string>
    <string name="amps">Amps </string>
    <string name="encl">ENCL </string>
    <string name="ins_cl">INS.CL </string>
    <string name="mfg_year">Mfg Year </string>
    <string name="amb_temp">AMB Temp </string>
    <string name="duty">Duty </string>
    <string name="analyse">Analyse</string>
    <string name="date">date</string>
    <string name="p_rating">P_Rating </string>
    <string name="please_click_below_to_read_add_or_delete_data">Please click below to read,add or delete data</string>

</resources>