<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RUDe"
    android:orientation="vertical"
    android:background="#000">


<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="80dp"-->
<!--        android:gravity="center"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="#ffff"-->
<!--        android:textScaleX="2"-->
<!--        android:textSize="20dp"-->
<!--        android:textStyle="italic"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        tools:layout_editor_absoluteX="0dp" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
                <Button
                    android:id="@+id/btnadd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0.1dp"
                    android:text="@string/add" />
                <Button
                    android:id="@+id/btnRead"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0.1dp"
                    android:text="@string/read" />

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0.1dp"
                    android:text="@string/delete" />

                <Button
                    android:id="@+id/analyse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0.1dp"
                    android:text="@string/analyse" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>