<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wantToUpdate">

  <TextView
      android:id="@+id/textView11"
      android:layout_width="120dp"
      android:layout_height="40dp"
      android:layout_marginStart="32dp"
      android:layout_marginLeft="32dp"
      android:layout_marginTop="8dp"
      android:text="@string/company"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView14"
      android:layout_width="120dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:text="@string/rpm"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.151"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView11" />

  <TextView
      android:id="@+id/textView15"
      android:layout_width="120dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:text="@string/power_rating"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.151"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView14" />

  <TextView
      android:id="@+id/textView16"
      android:layout_width="120dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:text="@string/volts"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.151"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView15" />

  <TextView
      android:id="@+id/textView17"
      android:layout_width="120dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:text="@string/amps"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.151"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView16" />

  <TextView
      android:id="@+id/textView18"
      android:layout_width="120dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:text="@string/encl"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.151"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView17" />

  <TextView
      android:id="@+id/textView19"
      android:layout_width="120dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:text="@string/ins_cl"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.151"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView18" />

  <TextView
      android:id="@+id/textView20"
      android:layout_width="120dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:text="@string/mfg_year"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.151"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView19" />

  <TextView
      android:id="@+id/textView21"
      android:layout_width="120dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:text="@string/amb_temp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.151"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView20" />

  <TextView
      android:id="@+id/textView22"
      android:layout_width="120dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:text="@string/duty"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.151"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView21"
      app:layout_constraintVertical_bias="0.018" />

  <EditText
      android:id="@+id/et1"
      android:layout_width="175dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.43"
      app:layout_constraintStart_toEndOf="@+id/textView11"
      app:layout_constraintTop_toTopOf="parent"
      android:importantForAutofill="no" />

  <EditText
      android:id="@+id/et2"
      android:layout_width="175dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.43"
      app:layout_constraintStart_toEndOf="@+id/textView14"
      app:layout_constraintTop_toBottomOf="@+id/et1"
      android:importantForAutofill="no" />

  <EditText
      android:id="@+id/et3"
      android:layout_width="175dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.43"
      app:layout_constraintStart_toEndOf="@+id/textView15"
      app:layout_constraintTop_toBottomOf="@+id/et2"
      android:importantForAutofill="no" />

  <EditText
      android:id="@+id/et4"
      android:layout_width="175dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.43"
      app:layout_constraintStart_toEndOf="@+id/textView16"
      app:layout_constraintTop_toBottomOf="@+id/et3"
      android:importantForAutofill="no" />

  <EditText
      android:id="@+id/et5"
      android:layout_width="175dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.43"
      app:layout_constraintStart_toEndOf="@+id/textView17"
      app:layout_constraintTop_toBottomOf="@+id/et4"
      android:importantForAutofill="no" />

  <EditText
      android:id="@+id/et6"
      android:layout_width="175dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.43"
      app:layout_constraintStart_toEndOf="@+id/textView18"
      app:layout_constraintTop_toBottomOf="@+id/et5"
      android:importantForAutofill="no" />

  <EditText
      android:id="@+id/et7"
      android:layout_width="175dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.43"
      app:layout_constraintStart_toEndOf="@+id/textView19"
      app:layout_constraintTop_toBottomOf="@+id/et6"
      android:importantForAutofill="no" />

  <EditText
      android:id="@+id/et8"
      android:layout_width="175dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.43"
      app:layout_constraintStart_toEndOf="@+id/textView20"
      app:layout_constraintTop_toBottomOf="@+id/et7"
      android:importantForAutofill="no" />

  <EditText
      android:id="@+id/et9"
      android:layout_width="175dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.469"
      app:layout_constraintStart_toEndOf="@+id/textView21"
      app:layout_constraintTop_toBottomOf="@+id/et8"
      android:importantForAutofill="no" />

  <EditText
      android:id="@+id/et10"
      android:layout_width="175dp"
      android:layout_height="40dp"
      android:layout_marginTop="8dp"
      android:ems="10"
      android:inputType="textPersonName"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.461"
      app:layout_constraintStart_toEndOf="@+id/textView22"
      app:layout_constraintTop_toBottomOf="@+id/et9"
      android:importantForAutofill="no" />

  <Button
      android:id="@+id/button"
      android:layout_width="106dp"
      android:layout_height="38dp"
      android:text="@string/update"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/et10"
      app:layout_constraintVertical_bias="0.126" />
</androidx.constraintlayout.widget.ConstraintLayout>